--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
 
-    <link rel="manifest" href="./json/manisfest.json">
+    <link rel="manifest" href="./json/manifest.json">
+    <link rel="icon" href="./img/todo-list.png">
 
     <script src="js/script.js" defer></script>
 
