--- a/index.html
+++ b/index.html
@@ -62,5 +62,15 @@
             
         </div>
     </div>
+
+    <footer class="rodape">
+        <p> Desenvolvido por André Felype - 2025</p>
+        <p>Copyright &copy; todos os direitos reservados.</p>
+        <p><a href="http://github.com/Andrefelype1903"><img src=img/github.png alt="GitHub"></a>
+            <a href="http://www.linkedin.com/in/andre-felype-ferreira-da-silva-56835a246/"><img src=img/likedin.png alt="Linkedin"></a>
+            <a href="https://www.instagram.com/andrefilype/"><img src=img/instagram.png alt="instagram"></a>
+        </p>
+    </footer>
+
 </body>
 </html>
