--- a/index.html
+++ b/index.html
@@ -61,8 +61,8 @@
                 <h4>Filtrar:</h4>
                 <select id="filter-select">
                     <option value="all">Todos</option>
-                    <option value="done">Feitos</option>
-                    <option value="todo">A fazer</option>
+                    <option id="filter-done" value="done">Feitos</option>
+                    <option id="filter-todo" value="todo">A fazer</option>
                 </select>
             </div>
         </div>
