--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
                 <select name="" id="control">
                     <option value="todo-list">Lista de tarefas</option>
                     <option value="bags-control">Controle de sacola</option>
+                    <option value="market-list">Lista de compras</option>
+                    <option value="grilo-list">Tarefas Grilo</option>
                 </select>
             </div>
             <h1 class="title-todo">Lista de tarefas</h1>
         </header>
         <form class="" id="todo-form">
-            <p>Adicione sua tarefa</p>
+            <p class="title-todo-modo">Adicione sua tarefa</p>
             <div class="form-control">
                 <input type="text" id="todo-input" placeholder="O que você vai fazer?">
                 <button type="submit">
