add modo walter e ninim

--- a/index.html
+++ b/index.html
@@ -23,11 +23,15 @@
                 <select name="" id="control">
                     <option value="todo-list">Lista de tarefas</option>
                     <option value="bags-control">Controle de sacola</option>
+                    <option value="bags-control-walter">Sacola Walter</option>
+                    <option value="bags-control-ninim">Sacola Ninim</option>
                     <option value="market-list">Lista de compras</option>
                     <option value="grilo-list">Tarefas Grilo</option>
                 </select>
             </div>
-            <h1 class="title-todo">Lista de tarefas</h1>
+            <div class="title-logo">
+                <h1 class="title-todo">Lista de tarefas</h1>
+            </div>
         </header>
         <form class="" id="todo-form">
             <p class="title-todo-modo">Adicione sua tarefa</p>
